# jeopyrdy

./: README.md  pyproject.toml  requirements.txt  setup.cfg
jeopydy/: __init__.py  board.py  game.py  player.py  utils.py
jeopyrdy/: __init__.py  board.py  game.py  player.py  utils.py
