[metadata]
name = jeopyrdy
url="https://github.com/fazetu/jeopyrdy"
license="",
author="Tucker Fazendin",
author_email="tuckerfazendin@gmail.com",
description="A package for running a simple Jeopardy game"

[options]
zip_safe = True
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.22.4
    pandas>=1.4.2
    pyfiglet>=0.8.post1
    tabulate>=0.8.10